# hangman

./: .travis.yml  LICENSE  README.md  hangman-off.cabal  hangman.cabal  words.txt
slides/: README.md  hangman.tex  makefile
src/: Hangman.hs  Main.hs
tests/: DocTests.hs  HangmanHspec.hs  Hspecs.hs
tutorial/: README.md
words/: words-1.txt  words-2.txt  words-3.txt  words.txt
