name:                hangman
version:             0.1.0
synopsis:            Hangman: Off with their heads!
description:         Hangman: Off with their heads!
-- license:
-- license-file:        LICENSE
author:              Juan Pedro Villa Isaza
maintainer:          jpvillaisaza@gmail.com
-- copyright:
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hangman
  main-is:             Main.hs
  other-modules:       Hangman
  build-depends:       base >=4.7 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite doctests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  hs-source-dirs:   tests
  main-is:          DocTests.hs
  build-depends:    base
                  , doctest
                  , QuickCheck
