name:                hangman-off
version:             0.1.0
synopsis:            Hangman: Off with their heads!
description:         Hangman: Off with their heads!
-- license:
-- license-file:        LICENSE
author:              Juan Pedro Villa Isaza
maintainer:          jpvillaisaza@gmail.com
-- copyright:
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

bug-reports:         https://github.com/stackbuilders/hangman/issues

source-repository head
  type:              git
  location:          https://github.com/stackbuilders/hangman

library
  exposed-modules:   Hangman
  build-depends:     base >= 4.7 && < 4.9
  ghc-options:       -Wall
  hs-source-dirs:    src
  default-language:  Haskell2010

executable hangman-off
  main-is:           Main.hs
  build-depends:     base, hangman-off, QuickCheck
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall

test-suite doctests
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -threaded
  hs-source-dirs:    tests
  main-is:           DocTests.hs
  build-depends:     base, doctest, QuickCheck

test-suite hspecs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  hs-source-dirs:    tests
  ghc-options:       -Wall
  main-is:           Hspecs.hs
  other-modules:     HangmanHspec
  build-depends:     base, hangman-off, hspec, QuickCheck
